--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,16 @@ section {
   background-color: #f6f4f3;
 }
 
-#header-info,
 #footer-info {
+  padding-bottom: 40px;
+}
+
+#header-info,
+#info-links,
+#info-about {
   font-size: 2.5rem;
+  color: black;
+  padding-top: 40px;
 }
 
 #li-tech-stack {
