--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,41 @@
 section {
   background-color: #f6f4f3;
+  padding-top: 60px !important;
+}
+
+#name {
+  font-size: 4.5rem;
+}
+
+#subtitle {
+  font-size: 2.2rem;
+}
+
+#slide-title {
+  font-weight: bolder;
+}
+
+#slide-subtitle {
+  font-size: 2.5rem;
+}
+
+#curly-brace,
+#slash {
+  font-size: 6.5rem;
+  color: purple;
+  font-weight: bolder;
 }
 
 #footer-info {
-  padding-bottom: 40px;
+  padding-bottom: 50px;
+}
+
+#footer-home {
+  padding-bottom: 30px;
+}
+
+#about-container {
+  padding: 30px;
 }
 
 #header-info,
@@ -14,7 +46,115 @@ section {
   padding-top: 40px;
 }
 
-#li-tech-stack {
-  width: 168px;
+#logo-container {
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#logo {
+  width: 120px;
+  height: 120px;
+  list-style-type: none;
+  text-align: center;
+}
+
+#html-js-css {
+  width: 292px;
+  height: 120px;
+  list-style-type: none;
+  text-align: center;
+}
+
+#logo-spring {
+  width: 80px;
+  height: 80px;
+  list-style-type: none;
+  text-align: center;
+}
+
+#tech-stack-row {
+  padding-bottom: 55px;
+}
+
+#counter,
+#navigation a {
+  color: black !important;
+}
+
+#webslides:hover #navigation a:hover {
+  background-color: purple !important;
+  color: #fff;
+}
+
+/* Animations */
+
+/* Back Pulse */
+@-webkit-keyframes hvr-back-pulse {
+  50% {
+    color: black;
+  }
+}
+@keyframes hvr-back-pulse {
+  50% {
+    background-color: purple;
+  }
+}
+.hvr-back-pulse {
+  display: inline-block;
   vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+.hvr-back-pulse:hover,
+.hvr-back-pulse:focus,
+.hvr-back-pulse:active {
+  -webkit-animation-name: hvr-back-pulse;
+  animation-name: hvr-back-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  color: purple;
+}
+
+/* Underline From Center */
+.hvr-underline-from-center {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-underline-from-center:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  bottom: 0px;
+  background: purple;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-from-center:hover:before,
+.hvr-underline-from-center:focus:before,
+.hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
 }
