added missing logos and css animations

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,6 @@ section {
   padding-top: 60px !important;
 }
 
-#name {
-  font-size: 4.5rem;
-}
-
 #subtitle {
   font-size: 2.2rem;
 }
@@ -26,12 +22,8 @@ section {
   font-weight: bolder;
 }
 
-#footer-info {
-  padding-bottom: 50px;
-}
-
-#footer-home {
-  padding-bottom: 30px;
+#home {
+  color: purple;
 }
 
 #about-container {
@@ -44,6 +36,10 @@ section {
   font-size: 2.5rem;
   color: black;
   padding-top: 40px;
+}
+
+#footer-home {
+  padding-bottom: 20px;
 }
 
 #logo-container {
@@ -59,22 +55,13 @@ section {
   text-align: center;
 }
 
-#html-js-css {
-  width: 292px;
-  height: 120px;
-  list-style-type: none;
-  text-align: center;
-}
-
-#logo-spring {
-  width: 80px;
-  height: 80px;
-  list-style-type: none;
-  text-align: center;
-}
-
 #tech-stack-row {
   padding-bottom: 55px;
+  padding-left: 60px;
+}
+
+#tech-stack-row-2 {
+  padding-left: 60px;
 }
 
 #counter,
@@ -84,46 +71,89 @@ section {
 
 #webslides:hover #navigation a:hover {
   background-color: purple !important;
-  color: #fff;
+  color: var(--bg-color);
 }
 
 /* Animations */
 
-/* Back Pulse */
-@-webkit-keyframes hvr-back-pulse {
-  50% {
-    color: black;
-  }
+/* title styles */
+
+:root {
+  --bg-color: #f6f4f3;
 }
-@keyframes hvr-back-pulse {
-  50% {
-    background-color: purple;
-  }
-}
-.hvr-back-pulse {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+body {
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+  color: #000;
+  background-color: purple;
 }
-.hvr-back-pulse:hover,
-.hvr-back-pulse:focus,
-.hvr-back-pulse:active {
-  -webkit-animation-name: hvr-back-pulse;
-  animation-name: hvr-back-pulse;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  color: purple;
+
+.home-title {
+  display: flex;
+  font-weight: bolder;
+}
+
+.home-title #name {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  line-height: 1.2;
+  font-family: 'Rubik', sans-serif !important;
+  font-style: normal !important;
+}
+
+.home-title #name::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  animation: a-ltr-after 2s cubic-bezier(0.77, 0, 0.18, 1) forwards;
+  transform: translateX(-101%);
+}
+
+.home-title #name::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--bg-color);
+  animation: a-ltr-before 2s cubic-bezier(0.77, 0, 0.18, 1) forwards;
+  transform: translateX(0);
+}
+
+.home-title #name:nth-of-type(1)::before,
+.home-title #name:nth-of-type(1)::after {
+  animation-delay: 1.5s;
+}
+
+.home-title #name:nth-of-type(2)::before,
+.home-title #name:nth-of-type(2)::after {
+  animation-delay: 1.5s;
+}
+
+@keyframes a-ltr-after {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(101%);
+  }
+}
+
+@keyframes a-ltr-before {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300%);
+  }
 }
 
 /* Underline From Center */
@@ -157,4 +187,153 @@ section {
 .hvr-underline-from-center:active:before {
   left: 0;
   right: 0;
+}
+
+/* Common style */
+.grid figure {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 320px;
+  max-width: 480px;
+  max-height: 360px;
+  width: 48%;
+  background: #3085a3;
+  text-align: center;
+  cursor: pointer;
+}
+
+.grid figure img {
+  position: relative;
+  display: block;
+  min-height: 100%;
+  max-width: 100%;
+  /*opacity: 0.8;*/
+}
+
+.grid figure figcaption {
+  padding: 2em;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.grid figure figcaption::before,
+.grid figure figcaption::after {
+  pointer-events: none;
+}
+
+.grid figure figcaption,
+.grid figure figcaption > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+.grid figure figcaption > a {
+  z-index: 1000;
+  text-indent: 200%;
+  white-space: nowrap;
+  font-size: 0;
+  opacity: 0;
+}
+
+.grid figure h2 {
+  /*word-spacing: -0.15em;*/
+  font-weight: 300;
+}
+
+.grid figure h2 span {
+  font-weight: 800;
+}
+
+.grid figure h2,
+.grid figure p {
+  margin: 0;
+}
+
+.grid figure p {
+  letter-spacing: 1px;
+  font-size: 68.5%;
+}
+
+figure.effect-sarah {
+  background: purple;
+}
+
+figure.effect-sarah img {
+  max-width: none;
+  width: -webkit-calc(100% + 20px);
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px, 0, 0);
+  transform: translate3d(-10px, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+figure.effect-sarah:hover img {
+  opacity: 0.4;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+figure.effect-sarah figcaption {
+  text-align: left;
+}
+
+figure.effect-sarah h2 {
+  position: relative;
+  overflow: hidden;
+  padding: 0.5em 0;
+  opacity: 0;
+}
+
+figure.effect-sarah:hover h2 {
+  position: relative;
+  overflow: hidden;
+  padding: 0.5em 0;
+  opacity: 1;
+}
+
+figure.effect-sarah h2::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+
+figure.effect-sarah:hover h2::after {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+figure.effect-sarah p {
+  padding: 1em 0;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+
+figure.effect-sarah:hover p {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
